--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,30 @@
 body{
-    background-color: black ;
+    background-color: rgba(0, 0, 0, 0.065);
 }
 
 .list-group{
     cursor: pointer;
 }
 
-
+h1{
+    color:white;
+    font-weight: bold;
+}
 
 .title{
     text-align: center;
-    margin-top: 30px;
-    background-color: rgb(207, 189, 189);
-    color:black;
+    margin-top: 15rem;
+    padding:4px;
+    background-color: #2b3035;
+    color:white;
+    font-weight: bold;
     
 }
 
 .navbar-brand{
-    
     font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: xx-large;
 }
 
 img {
@@ -36,5 +42,44 @@ img {
 } 
 
 nav li {
-    margin-left: 20px; /* Adjust the value as needed */
+    margin-left: 20px; 
   }
+
+  .dropdown-item:hover,.nav-item :hover{
+    background-color: blue;
+  }
+
+.nav-item a{
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+    
+}
+
+.py-3{
+    margin-top:10rem;
+}
+
+.container{
+    text-align: center;
+    font-family:cursive;
+    margin-top: 5rem;
+}
+
+.bg-light {
+    --bs-bg-opacity: 1;
+    background-color:rgba(255, 255, 255, 0.846) !important; 
+    
+  }
+
+
+  .sliders{
+    transition: transform 0.3s ease-in-out !important;
+  }
+
+  .sliders:hover{
+    transform: scale(1.2) !important;
+  }
+
